fixed wording and updated assets for notebook 4

--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 4 - Convolutional Sentiment Analysis\n",
     "\n",
-    "In the previous notebooks, we managed to achieve a test accuracy of ~85% using RNNs and an implementation of the [Bag of Tricks for Efficient Text Classification](https://arxiv.org/abs/1607.01759) model. In this final notebook, we will be using a *convolutional neural network* (CNN) to conduct sentiment analysis, implementing the model from [Convolutional Neural Networks for Sentence Classification](https://arxiv.org/abs/1408.5882).\n",
+    "In the previous notebooks, we managed to achieve a test accuracy of ~85% using RNNs and an implementation of the [Bag of Tricks for Efficient Text Classification](https://arxiv.org/abs/1607.01759) model. In this notebook, we will be using a *convolutional neural network* (CNN) to conduct sentiment analysis, implementing the model from [Convolutional Neural Networks for Sentence Classification](https://arxiv.org/abs/1408.5882).\n",
     "\n",
     "**Note**: I am not aiming to give a comprehensive introduction and explanation of CNNs. For a better and more in-depth explanation check out [here](https://ujjwalkarn.me/2016/08/11/intuitive-explanation-convnets/) and [here](https://cs231n.github.io/convolutional-networks/).\n",
     "\n",
@@ -14,7 +14,7 @@
     "\n",
     "The intuitive idea behind learning the weights is that your convolutional layers act like *feature extractors*, extracting parts of the image that are most important for your CNN's goal, e.g. if using a CNN to detect faces in an image, the CNN may be looking for features such as the existance of a nose, mouth or a pair of eyes in the image.\n",
     "\n",
-    "So why use CNNs on text? In the same way that a 3x3 filter can look over a patch of an image, a 1x2 filter can look over a 2 sequential words in a piece of text, i.e. a bi-gram. In the previous tutorial we looked at the FastText model which used bi-grams by explicitly adding them to the end of a text, in this CNN model we will instead use multiple filters of different sizes which will look at the bi-grams (a 1x2 filter), tri-grams (a 1x3 filter) and n-grams (a 1x$n$ filter) within the text.\n",
+    "So why use CNNs on text? In the same way that a 3x3 filter can look over a patch of an image, a 1x2 filter can look over a 2 sequential words in a piece of text, i.e. a bi-gram. In the previous tutorial we looked at the FastText model which used bi-grams by explicitly adding them to the end of a text, in this CNN model we will instead use multiple filters of different sizes which will look at the bi-grams (a 1x2 filter), tri-grams (a 1x3 filter) and/or n-grams (a 1x$n$ filter) within the text.\n",
     "\n",
     "The intuition here is that the appearance of certain bi-grams, tri-grams and n-grams within the review will be a good indication of the final sentiment."
    ]
@@ -105,29 +105,29 @@
     "\n",
     "The first major hurdle is visualizing how CNNs are used for text. Images are typically 2 dimensional (we'll ignore the fact that there is a third \"colour\" dimension for now) whereas text is 1 dimensional. However, we know that the first step in almost all of our previous tutorials (and pretty much all NLP pipelines) is converting the words into word embeddings. This is how we can visualize our words in 2 dimensions, each word along one axis and the elements of vectors aross the other dimension. Consider the 2 dimensional representation of the embedded sentence below:\n",
     "\n",
-    "![](https://i.imgur.com/ci1h9hv.png)\n",
+    "![](assets/sentiment9.png)\n",
     "\n",
     "We can then use a filter that is **[n x emb_dim]**. This will cover $n$ sequential words entirely, as their width will be `emb_dim` dimensions. Consider the image below, with our word vectors are represented in green. Here we have 4 words with 5 dimensional embeddings, creating a [4x5] \"image\" tensor. A filter that covers two words at a time (i.e. bi-grams) will be **[2x5]** filter, shown in yellow, and each element of the filter with have a _weight_ associated with it. The output of this filter (shown in red) will be a single real number that is the weighted sum of all elements covered by the filter.\n",
     "\n",
-    "![](https://i.imgur.com/QlXduXu.png)\n",
+    "![](assets/sentiment12.png)\n",
     "\n",
     "The filter then moves \"down\" the image (or across the sentence) to cover the next bi-gram and another output (weighted sum) is calculated. \n",
     "\n",
-    "![](https://i.imgur.com/wuA330x.png)\n",
+    "![](assets/sentiment13.png)\n",
     "\n",
     "Finally, the filter moves down again and the final output for this filter is calculated.\n",
     "\n",
-    "![](https://i.imgur.com/gi1GaEz.png)\n",
+    "![](assets/sentiment14.png)\n",
     "\n",
     "In our case (and in the general case where the width of the filter equals the width of the \"image\"), our output will be a vector with number of elements equal to the height of the image (or lenth of the word) minus the height of the filter plus one, $4-2+1=3$ in this case.\n",
     "\n",
-    "This example showed how to calculate the output of one filter. Our model (and pretty much all CNNs) will have lots of these filters. The idea is that each filter will learn a different feature to extract. In the scenario of analysing text, we are hoping each of the **[2 x emb_dim]** filters will be looking for the occurence of different bi-grams. \n",
+    "This example showed how to calculate the output of one filter. Our model (and pretty much all CNNs) will have lots of these filters. The idea is that each filter will learn a different feature to extract. In the above example, we are hoping each of the **[2 x emb_dim]** filters will be looking for the occurence of different bi-grams. \n",
     "\n",
     "In our model, we will also have different sizes of filters, heights of 3, 4 and 5, with 100 of each of them. The intuition is that we will be looking for the occurence of different tri-grams, 4-grams and 5-grams that are relevant for analysing sentiment of movie reviews.\n",
     "\n",
-    "The next step in our model is to use *pooling* (specifically *max pooling*) on the output of the convolutional layers. This is similar to the FastText model where we performed the average over each of the word vectors, implemented by the `F.avg_pool2d` function, however instead of taking the average over a dimension, we are taking the maximum value over a dimension. Below an example of taking the maximum value (0.9) from the output of the convolutional layer on the example sentence (not shown in the activation function applied to the output of the convolutions).\n",
+    "The next step in our model is to use *pooling* (specifically *max pooling*) on the output of the convolutional layers. This is similar to the FastText model where we performed the average over each of the word vectors, implemented by the `F.avg_pool2d` function, however instead of taking the average over a dimension, we are taking the maximum value over a dimension. Below an example of taking the maximum value (0.9) from the output of the convolutional layer on the example sentence (not shown is the activation function applied to the output of the convolutions).\n",
     "\n",
-    "![](https://i.imgur.com/gzkS3ze.png)\n",
+    "![](assets/sentiment15.png)\n",
     "\n",
     "The idea here is that the maximum value is the \"most important\" feature for determining the sentiment of the review, which corresponds to the \"most important\" n-gram within the review. How do we know what the \"most important\" n-gram is? Luckily, we don't have to! Through backpropagation, the weights of the filters are changed so that whenever certain n-grams that are highly indicative of the sentiment are seen, the output of the filter is a \"high\" value. This \"high\" value then passes through the max pooling layer if it is the maximum value in the output. \n",
     "\n",
@@ -158,21 +158,24 @@
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        self.conv_0 = nn.Conv2d(in_channels=1, out_channels=n_filters, kernel_size=(filter_sizes[0],embedding_dim))\n",
-    "        self.conv_1 = nn.Conv2d(in_channels=1, out_channels=n_filters, kernel_size=(filter_sizes[1],embedding_dim))\n",
-    "        self.conv_2 = nn.Conv2d(in_channels=1, out_channels=n_filters, kernel_size=(filter_sizes[2],embedding_dim))\n",
-    "        self.fc = nn.Linear(len(filter_sizes)*n_filters, output_dim)\n",
+    "        self.conv_0 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "                                kernel_size = (filter_sizes[0], embedding_dim))\n",
+    "        self.conv_1 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "                                kernel_size = (filter_sizes[1], embedding_dim))\n",
+    "        self.conv_2 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "                                kernel_size = (filter_sizes[2], embedding_dim))\n",
+    "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "    def forward(self, text):\n",
     "        \n",
-    "        #x = [sent len, batch size]\n",
+    "        #text = [sent len, batch size]\n",
     "        \n",
-    "        x = x.permute(1, 0)\n",
+    "        text = text.permute(1, 0)\n",
     "                \n",
-    "        #x = [batch size, sent len]\n",
+    "        #text = [batch size, sent len]\n",
     "        \n",
-    "        embedded = self.embedding(x)\n",
+    "        embedded = self.embedding(text)\n",
     "                \n",
     "        #embedded = [batch size, sent len, emb dim]\n",
     "        \n",
@@ -221,19 +224,23 @@
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        self.convs = nn.ModuleList([nn.Conv2d(in_channels=1, out_channels=n_filters, kernel_size=(fs,embedding_dim)) for fs in filter_sizes])\n",
-    "        self.fc = nn.Linear(len(filter_sizes)*n_filters, output_dim)\n",
+    "        self.convs = nn.ModuleList([\n",
+    "                                    nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "                                              kernel_size = (fs, embedding_dim)) \n",
+    "                                    for fs in filter_sizes\n",
+    "                                    ])\n",
+    "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "    def forward(self, text):\n",
     "        \n",
-    "        #x = [sent len, batch size]\n",
+    "        #text = [sent len, batch size]\n",
     "        \n",
-    "        x = x.permute(1, 0)\n",
+    "        text = text.permute(1, 0)\n",
     "                \n",
-    "        #x = [batch size, sent len]\n",
+    "        #text = [batch size, sent len]\n",
     "        \n",
-    "        embedded = self.embedding(x)\n",
+    "        embedded = self.embedding(text)\n",
     "                \n",
     "        #embedded = [batch size, sent len, emb dim]\n",
     "        \n",
@@ -467,11 +474,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.495 | Train Acc: 74.84% | Val. Loss: 0.347 | Val. Acc: 85.16% |\n",
-      "| Epoch: 02 | Train Loss: 0.302 | Train Acc: 87.22% | Val. Loss: 0.293 | Val. Acc: 87.70% |\n",
-      "| Epoch: 03 | Train Loss: 0.219 | Train Acc: 91.47% | Val. Loss: 0.282 | Val. Acc: 88.43% |\n",
-      "| Epoch: 04 | Train Loss: 0.147 | Train Acc: 94.58% | Val. Loss: 0.278 | Val. Acc: 89.00% |\n",
-      "| Epoch: 05 | Train Loss: 0.090 | Train Acc: 97.05% | Val. Loss: 0.292 | Val. Acc: 89.14% |\n"
+      "| Epoch: 01 | Train Loss: 0.494 | Train Acc: 74.95% | Val. Loss: 0.362 | Val. Acc: 84.11% |\n",
+      "| Epoch: 02 | Train Loss: 0.304 | Train Acc: 87.31% | Val. Loss: 0.291 | Val. Acc: 87.86% |\n",
+      "| Epoch: 03 | Train Loss: 0.219 | Train Acc: 91.29% | Val. Loss: 0.278 | Val. Acc: 88.49% |\n",
+      "| Epoch: 04 | Train Loss: 0.147 | Train Acc: 94.65% | Val. Loss: 0.290 | Val. Acc: 88.77% |\n",
+      "| Epoch: 05 | Train Loss: 0.088 | Train Acc: 97.25% | Val. Loss: 0.316 | Val. Acc: 88.61% |\n"
      ]
     }
    ],
@@ -502,7 +509,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.307 | Test Acc: 88.43% |\n"
+      "| Test Loss: 0.330 | Test Acc: 87.60% |\n"
      ]
     }
    ],
@@ -558,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04627241939306259"
+       "0.05760132521390915"
       ]
      },
      "execution_count": 15,
@@ -585,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9447714686393738"
+       "0.9212645292282104"
       ]
      },
      "execution_count": 16,
@@ -614,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
