added text to multi-class notebook

--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5 - Multi-class Sentiment Analysis\n",
+    "\n",
+    "In all of the previous notebooks we have performed sentiment analysis on a dataset with only two classes, positive or negative. When we have only two classes our output can be a single scalar, bound between 0 and 1, that indicates what class an example belongs to. When we have more than 2 examples, our output must be a $C$ dimensional vector, where $C$ is the number of classes.\n",
+    "\n",
+    "In this notebook, we'll be performing classification on a dataset with 6 classes. Note that this dataset isn't actually a sentiment analysis dataset, it's a dataset of questions and the task is to classify what category the question belongs to. However, everything covered in this notebook applies to any dataset with examples that contain an input sequence belonging to one of $C$ classes.\n",
+    "\n",
+    "Below, we setup the fields, and load the dataset. \n",
+    "\n",
+    "The first difference is that we do not need to set the `dtype` in the `LABEL` field. When doing a mutli-class problem, PyTorch expects the labels to be numericalized `LongTensor`s. \n",
+    "\n",
+    "The second different is that we use `TREC` instead of `IMDB` to load the `TREC` dataset. The `fine_grained` argument allows us to use the fine-grained labels (of which there are 50 classes) or not (in which case they'll be 6 classes). You can change this how you please."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at one of the examples in the training set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -33,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "{'text': ['Who', 'is', 'Peter', 'Weir', '?'], 'label': 'HUM'}"
+       "{'text': ['What', 'is', 'a', 'Cartesian', 'Diver', '?'], 'label': 'DESC'}"
       ]
      },
      "execution_count": 2,
@@ -42,7 +66,14 @@
     }
    ],
    "source": [
-    "vars(train_data[0])"
+    "vars(train_data[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll build the vocabulary. As this dataset is small (only ~3800 training examples) it also has a very small vocabulary (~7500 unique tokens), this means we do not need to set a `max_size` on the vocabulary as before."
    ]
   },
   {
@@ -51,8 +82,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\")\n",
+    "TEXT.build_vocab(train_data, vectors=\"glove.6B.100d\")\n",
     "LABEL.build_vocab(train_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we can check the labels.\n",
+    "\n",
+    "The 6 labels (for the non-fine-grained case) correspond to the 6 types of questions in the dataset:\n",
+    "- `HUM` for questions about humans\n",
+    "- `ENTY` for questions about entities\n",
+    "- `DESC` for questions asking you for a description \n",
+    "- `NUM` for questions where the answer is numerical\n",
+    "- `LOC` for questions where the answer is a location\n",
+    "- `ABBR` for questions asking about abbreviations"
    ]
   },
   {
@@ -64,12 +110,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f39f3fd0f28>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
+      "defaultdict(<function _default_unk_index at 0x7f25b6be5e18>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
      ]
     }
    ],
    "source": [
     "print(LABEL.vocab.stoi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As always, we set up the iterators."
    ]
   },
   {
@@ -89,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll be using the CNN model from the previous notebook, however any of the models covered in these tutorials will work on this dataset. The only difference is now the `output_dim` will be $C$ instead of $1$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -102,19 +162,23 @@
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        self.convs = nn.ModuleList([nn.Conv2d(in_channels=1, out_channels=n_filters, kernel_size=(fs,embedding_dim)) for fs in filter_sizes])\n",
-    "        self.fc = nn.Linear(len(filter_sizes)*n_filters, output_dim)\n",
+    "        self.convs = nn.ModuleList([\n",
+    "                                    nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
+    "                                              kernel_size = (fs, embedding_dim)) \n",
+    "                                    for fs in filter_sizes\n",
+    "                                    ])\n",
+    "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "    def forward(self, text):\n",
     "        \n",
-    "        #x = [sent len, batch size]\n",
+    "        #text = [sent len, batch size]\n",
     "        \n",
-    "        x = x.permute(1, 0)\n",
+    "        text = text.permute(1, 0)\n",
     "                \n",
-    "        #x = [batch size, sent len]\n",
+    "        #text = [batch size, sent len]\n",
     "        \n",
-    "        embedded = self.embedding(x)\n",
+    "        embedded = self.embedding(text)\n",
     "                \n",
     "        #embedded = [batch size, sent len, emb dim]\n",
     "        \n",
@@ -138,6 +202,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define our model, making sure to set `OUTPUT_DIM` to $C$. We can get $C$ easily by using the size of the `LABEL` vocab, much like we used the length of the `TEXT` vocab to get the size of the vocabulary of the input."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -151,6 +222,13 @@
     "DROPOUT = 0.5\n",
     "\n",
     "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll load our pre-trained embeddings."
    ]
   },
   {
@@ -182,6 +260,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another different to the previous notebooks is our loss function (aka criterion). Before we used `BCEWithLogitsLoss`, however now we use `CrossEntropyLoss`. Without going into too much detail, `CrossEntropyLoss` performs a *softmax* function over our model outputs and the loss is given by the *cross entropy* between that and the label.\n",
+    "\n",
+    "Generally:\n",
+    "- `CrossEntropyLoss` is used when our examples exclusively belong to one of $C$ classes\n",
+    "- `BCEWithLogitsLoss` is used when our examples exclusively belong to only 2 classes (0 and 1) and is also used in the case where our examples belong to between 0 and $C$ classes (aka multilabel classification)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -198,6 +287,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before, we had a function that calculated accuracy in the binary label case, where we said if the value was over 0.5 then we would assume it is positive. In the case where we have more than 2 classes, our model outputs a $C$ dimensional vector, where the value of each element is the beleief that the example belongs to that class. \n",
+    "\n",
+    "For example, in our labels we have: 'HUM' = 0, 'ENTY' = 1, 'DESC' = 2, 'NUM' = 3, 'LOC' = 4 and 'ABBR' = 5. If the output of our model was something like: **[5.1, 0.3, 0.1, 2.1, 0.2, 0.6]** this means that the model strongly believes the example belongs to class 0, a question about a human, and slightly believes the example belongs to class 3, a numerical question.\n",
+    "\n",
+    "We calculate the accuracy by performing an `argmax` to get the index of the maximum value in the prediction for each element in the batch, and then counting how many times this equals the actual label. We then average this across the batch."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -210,6 +310,15 @@
     "    max_preds = preds.argmax(dim=1, keepdim=True) # get the index of the max probability\n",
     "    correct = max_preds.squeeze(1).eq(y)\n",
     "    return correct.sum()/torch.FloatTensor([y.shape[0]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training loop is similar to before, without the need to `squeeze` the model predictions as `CrossEntropyLoss` expects the input to be **[batch size, n classes]** and the label to be **[batch size]**.\n",
+    "\n",
+    "The label needs to be a `LongTensor`, which it is by default as we did not set the `dtype` to a `FloatTensor` as before."
    ]
   },
   {
@@ -246,6 +355,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The evaluation loop is, again, similar to before."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -272,6 +388,13 @@
     "            epoch_acc += acc.item()\n",
     "        \n",
     "    return epoch_loss / len(iterator), epoch_acc / len(iterator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we train our model."
    ]
   },
   {
@@ -305,6 +428,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the non-fine-grained case, we should get an accuracy of around 90%. For the fine-grained case, we should get around 70%."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -324,6 +454,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to how we made a function to predict sentiment for any given sentences, we can now make a function that will predict the class of question given.\n",
+    "\n",
+    "The only difference here is that instead of using a sigmoid function to squash the input between 0 and 1, we use the `argmax` to get the highest predicted class index. We then use this index with the label vocab to get the human readable label."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -332,7 +471,7 @@
     "import spacy\n",
     "nlp = spacy.load('en')\n",
     "\n",
-    "def predict_sentiment(sentence, min_len=4):\n",
+    "def predict_class(sentence, min_len=4):\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
     "    if len(tokenized) < min_len:\n",
     "        tokenized += ['<pad>'] * (min_len - len(tokenized))\n",
@@ -342,6 +481,13 @@
     "    preds = model(tensor)\n",
     "    max_preds = preds.argmax(dim=1)\n",
     "    return max_preds.item()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's try it out on a few different questions..."
    ]
   },
   {
@@ -358,15 +504,8 @@
     }
    ],
    "source": [
-    "pred_class = predict_sentiment(\"Who is Donald Trump?\")\n",
+    "pred_class = predict_class(\"Who is Keyser Söze?\")\n",
     "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "An example positive review..."
    ]
   },
   {
@@ -378,12 +517,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Predicted class is: 3 = NUM\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_class = predict_class(\"How many minutes are in six hundred and eighteen hours?\")\n",
+    "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class is: 4 = LOC\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred_class = predict_class(\"What continent is Bulgaria in?\")\n",
+    "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Predicted class is: 5 = ABBR\n"
      ]
     }
    ],
    "source": [
-    "pred_class = predict_sentiment(\"What does is USSR stand for?\")\n",
+    "pred_class = predict_class(\"What does WYSIWYG stand for?\")\n",
     "print(f'Predicted class is: {pred_class} = {LABEL.vocab.itos[pred_class]}')"
    ]
   }
